fixed side spacing so it lines up with rest of page

--- a/packages/frontend/app/styles/components/programyear-overview.scss
+++ b/packages/frontend/app/styles/components/programyear-overview.scss
@@ -7,8 +7,8 @@
   background: var(--white);
   border-top: 1px dotted var(--orange);
   border-bottom: 0;
-  margin: 0 1.5rem;
-  padding: 0 0.8rem 1rem 0.8rem;
+  margin: 0 0.5rem;
+  padding: 0 0 1rem 0;
 
   .programyear-overview-header {
     @include m.ilios-overview-header;
